# software-renderer

./: CMakeLists.txt  README.md  line.h  main.cpp  model.cpp  model.h  renderer.cpp  renderer.h  rmath.h  tga_image.cpp  tga_image.h
core/: line.h  rmath.h
render/: raster_renderer.cpp  raster_renderer.h  renderer.h  wireframe_renderer.cpp  wireframe_renderer.h
